[metadata]
version = v0.0.0
name = github_asset
long-description = file: README.md

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
packages = {}
test_suite = tests
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =

[flake8]
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[tool:pytest]
testpaths = tests

[versionpup]
tag = True
commit = True