[metadata]
version = v0.1.0
name = github_asset
long-description = file: README.md
packages = github_asset.py

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
test_suite = tests
setup_requires = 
	setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires = 
	fire
	requests

[flake8]
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[tool:pytest]
testpaths = test_github_asset.py

[versionup]
tag = True
commit = True

[options.entry_points]
console_scripts = 
	github-asset = github_asset:main